# sha256

./: .gitignore  CHANGELOG  README.md  flake.nix  ppad-sha256.cabal
bench/: Main.hs  Weight.hs
cbits/: sha256_arm.c
lib/Crypto/: SHA256.hs
lib/Crypto/Hash/: SHA256.hs  SHA256.ll  SHA256D.hs
lib/Crypto/Hash/SHA256/: Arm.hs  Arm.ll  Internal.hs  Internal.ll  Lazy.hs  Lazy.ll
src/: HashLarge.hs
test/: Main.hs  Property.hs
