cabal-version:      3.0
name:               ppad-sha256
version:            0.1.0
synopsis:           The SHA-256 algorithm
license:            MIT
license-file:       LICENSE
author:             Jared Tobin
maintainer:         jared@ppad.tech
category:           Cryptography
build-type:         Simple
tested-with:        GHC == { 9.6.4 }
extra-doc-files:    CHANGELOG
description:
  A pure Haskell implementation of SHA-256 as specified by RFC 6234.

source-repository head
  type:     git
  location: git.ppad.tech/sha256.git

library
  default-language: Haskell2010
  hs-source-dirs:   lib
  ghc-options:
      -Wall
  exposed-modules:
      Crypto.Hash.SHA256
  build-depends:
      base
    , bytestring

