cabal-version:      3.0
name:               ppad-sha256
version:            0.1.0
synopsis:           The SHA-256 and HMAC-SHA256 algorithms
license:            MIT
license-file:       LICENSE
author:             Jared Tobin
maintainer:         jared@ppad.tech
category:           Cryptography
build-type:         Simple
tested-with:        GHC == { 9.6.4 }
extra-doc-files:    CHANGELOG
description:
  A pure implementation of SHA-256 and HMAC-SHA256 on strict and lazy
  ByteStrings, as specified by RFC's 6234 and 2104.

source-repository head
  type:     git
  location: git.ppad.tech/sha256.git

library
  default-language: Haskell2010
  hs-source-dirs:   lib
  ghc-options:
      -Wall
  exposed-modules:
      Crypto.Hash.SHA256
  build-depends:
      base
    , bytestring

